; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_opentcpip.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_opentcpip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dbginterface = type { i64 }

@listensock = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dbginterface*)* @opentcpip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opentcpip(%struct.dbginterface* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dbginterface*, align 8
  store %struct.dbginterface* %0, %struct.dbginterface** %3, align 8
  %4 = load i64, i64* @listensock, align 8
  %5 = icmp sge i64 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load %struct.dbginterface*, %struct.dbginterface** %3, align 8
  %8 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load i64, i64* @listensock, align 8
  %13 = call i64 @tcpip_accept(i64 %12)
  %14 = load %struct.dbginterface*, %struct.dbginterface** %3, align 8
  %15 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  br label %16

16:                                               ; preds = %11, %6, %1
  %17 = load %struct.dbginterface*, %struct.dbginterface** %3, align 8
  %18 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  store i32 -1, i32* %2, align 4
  br label %28

22:                                               ; preds = %16
  %23 = load %struct.dbginterface*, %struct.dbginterface** %3, align 8
  %24 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @tcpip_starttimer(i64 %25)
  br label %27

27:                                               ; preds = %22
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %21
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @tcpip_accept(i64) #1

declare dso_local i32 @tcpip_starttimer(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
